--- a/src/App.css
+++ b/src/App.css
@@ -27,21 +27,13 @@
 .App-link {
   color: #61dafb;
 }
-.your{
-  font-size: 24px;
-  font-weight: 600;
-  color: #c92291;
-}
-#Tracker_parent{
-  height:300px;
-  width:300px;
-  display:flex;
+.Tracker_parent{
+  height: 600px;
+  width:600px;
   border:2px solid black;
-  align-items: center;
-  justify-content: center;
-
- 
 }
+
+
 
 @keyframes App-logo-spin {
   from {
