--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,14 @@ h2 {
   letter-spacing: 1px;
 }
 
+#ai-insights{
+  width: 70vw;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .nav-link {
   color: rgba(255, 255, 255, 0.8) !important;
   font-weight: 500 !important;
